[package]
name = "pistoncore-libnx-rs_window"
version = "0.1.0"
authors = ["ischeinkman <scheinkman.ilan@gmail.com>"]

[lib]
name = "libnx_rs_window"

[dependencies]
libnx-rs = {git = "https://github.com/ischeinkman/libnx-rs"}
pistoncore-input = "0.21.0"
pistoncore-window = "0.32.0"
egl = { git = "https://github.com/ischeinkman/rust-egl" }